# vex

./: CMakeLists.txt  LICENSE  Plugvex.H  README.md  Settings.H  UPCOMING  defaults.qrc  main.cpp  main.cxx  merged.txt  resources.qrc  syntax.vex  theme.qss  vex.desktop.in  vex.svgz
Core/: CMakeLists.txt  LookAndFeelCore.cxx  SyntaxCore.cxx  VexCore.cxx
Core/themes/: t.qrc  vex.qss
DBS/: CONF  build  vex.desktop
DBS/BSD/freebsd/: .directory  install.sh
DBS/DBS/: deb.sh  freebsd.sh  mac.sh  rpm.sh  tgz.sh
DBS/linux/ARCH/: vex.install
DBS/linux/rpm/: postrm
DBS/mac/: .directory  Info.plist  icns.qrc
DBS/win/: installer.nsi  windows.bat
DBS/windows/: ico.qrc
Dists/: CONF  README.md  build  vex.desktop
Dists/BSD/freebsd/: deinstall.sh  install.sh
Dists/DBS/: appimage.sh  arch.sh  deb.sh  freebsd.sh  mac.sh  rpm.sh  tgz.sh
Dists/linux/appimage/usr/lib/x86_64-linux-gnu/: libQt6XcbQpa.so.6.8.2
Dists/linux/deb/: .directory
Dists/mac/: Info.plist
Dists/win/: installer.nsi  vex.rc  windows.bat
compiled/: vex.deb
